# UNI-D2

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_docs.yml
configs/: config.yaml
configs/algo/: ar.yaml  bd3lm.yaml  candi.yaml  flexmdm-anyorder.yaml  gidd.yaml  mdlm.yaml  partition-mdlm.yaml  sedd.yaml  udlm.yaml
configs/callbacks/: sample_saver.yaml  training_latency.yaml
configs/data/: openwebtext-streaming.yaml  openwebtext.yaml
configs/eval/: gen_ppl.yaml  generate_samples.yaml
configs/forward_process/: absorbing.yaml  block_absorbing.yaml  uniform.yaml
configs/lr_scheduler/: cosine_decay_warmup.yaml  step_scheduler.yaml
configs/model/: block_dit.yaml  flexmdm_anyorder.yaml  hf_gpt2.yaml  small-encoder-decoder.yaml  small.yaml
configs/noise/: cosine.yaml  geometric.yaml  hybrid.yaml  linear.yaml  log-linear.yaml
configs/sampling/: default.yaml  udlm.yaml
docs/: architecture.md  contributing.md  index.md
docs/examples/: bd3lm.md  flexmdm.md  gidd.md  mdlm.md  pgm.md  sedd.md  udlm.md
docs/extension_guides/: 01_custom_algorithm.md  02_custom_forward_process.md  03_custom_noise_schedule.md  04_custom_model.md  README.md
docs/reference/algorithms/: ar.md  base.md  bd3lm.md  flexmdm.md  gidd.md  mdlm.md  partition_mdlm.md  sedd.md  udlm.md
docs/reference/callbacks/: latency.md  sample_saver.md
docs/reference/data/: datamodule.md  datasets.md  flex_chunking.md  loaders.md  processing.md  tokenizers.md
docs/reference/evaluations/: generative_ppl.md  harness.md  metrics.md
docs/reference/forward_process/: absorbing.md  base.md  block_absorbing.md  flexmdm.md  uniform.md  utils.md
docs/reference/models/: block_dit.md  common.md  dit.md  ema.md  encoder_decoder.md  flexmdm.md  hf_gpt2.md
docs/reference/noise_schedules/: base.md  cosine.md  flex.md  geometric.md  hybrid.md  linear.md  log_linear.md
docs/reference/sampling/: absorbing.md  ar.md  base.md  bd3lm.md  flexmdm.md  gidd.md  partition.md  uniform.md
examples/bd3lm/: README.md  owt.sh
examples/flexmdm/: README.md  owt.sh
examples/gidd/: README.md  owt.sh
examples/mdlm/: README.md  owt.sh
examples/pgm/: README.md  owt.sh
examples/sedd/: README.md  owt.sh
examples/udlm/: README.md  text8.sh
src/discrete_diffusion/: __init__.py  __main__.py  train.py
src/discrete_diffusion/algorithms/: __init__.py  ar.py  base.py  bd3lm.py  candi.py  flexmdm_anyorder.py  gidd.py  mdlm.py  sedd.py  (+2 more)
(+51 files in other folders)
